data/derived/comb/progs/unify/prog3493.ml.out
Characters 42-43:
  if n > 0 then clone (x::[]) (n - 1) else [];;
                       ^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
